# LocalPassword

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.js  styles.css  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: pm-integration.md
src/: App.vue  index.js  main.js  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands.ts  main.rs
src/components/: GeneratorPage.vue  ImportExportPage.vue  LoginPage.vue  PasswordDialog.vue  PasswordsPage.vue  SettingsPage.vue
src/stores/: auth.js
src/utils/: logger.js
tests/: README.md
tests/e2e/: generator.spec.js  login.spec.js  passwords.spec.js  settings.spec.js
tests/unit/: auth.spec.js
